--- a/BiebCWebsite/appsettings.json
+++ b/BiebCWebsite/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BiebCWebsiteContext": "Server=(localdb)\\mssqllocaldb;Database=BiebCWebsiteContext-adbff9af-9a06-48dc-98e4-852713883b95;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
